ui: fix send page filter group alignment
^fox-60012

--- a/src/scss/pages.scss
+++ b/src/scss/pages.scss
@@ -87,7 +87,7 @@ app-org-vault-groupings,
 
       &.type-label {
         h3.d-flex {
-          margin: 0 0 0 17px;
+          margin: 0 0 0 1.5rem;
           i {
             padding: 2px;
             margin: 0 0 2px 0;
